--- a/style/style.css
+++ b/style/style.css
@@ -31,13 +31,13 @@ header {
 /* Navbar */
 .navbar-home {
     text-align: center;
-    padding: 2rem 0;
+    padding: 3rem 0 2rem 0;
 }
 
 .navbar-home a {
     text-decoration: none;
     margin: 0 1rem;
-    font-size: 2rem;
+    font-size: 1.4rem;
     color: #473a35;
 }
 
@@ -77,7 +77,7 @@ header {
 }
 
 .knapp-tilbake:hover, .knapp-neste:hover {
-    background-color: #869e86;
+    background-color: #637863;
     border-radius: 0.3rem;
   }
 
@@ -95,7 +95,7 @@ header {
     background-color: #473a35;
     border-radius: 50%;
     display: inline-block;
-    transition: background-color 1s ease;
+    transition: background-color 0.2s ease;
 }
 
 .dot:hover, .active {
@@ -135,6 +135,11 @@ footer {
 .kolonne-footer h1 {
     margin-bottom: 0.5rem;
     font-family: 'Bebas Neue', cursive;
+    font-size: 1.4rem;
+}
+
+.kolonne-footer p, .kolonne-footer a {
+    letter-spacing: 0.02rem;
 }
 
 /* Font Awesome Icons er hentet fra:
@@ -189,7 +194,7 @@ color: #382c20;
 }
 
 /* Responsive for bigger screens */
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 850px) {
 
     #main, #mySidebar {
         display: none;
@@ -198,7 +203,7 @@ color: #382c20;
 }
 
 /* Responsive for tablets */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 850px) {
     
     /* Bildet i header flytter og gjøres mindre */    
     .bildeseksjon img {
@@ -216,7 +221,7 @@ color: #382c20;
         z-index: 1;
         top: 0;
         left: 0;
-        background-color: #869e86;
+        background-color: #637863;
         overflow-x: hidden;
         transition: 0.5s;
         padding-top: 5rem;
@@ -226,13 +231,12 @@ color: #382c20;
         padding: 1rem;
         text-decoration: none;
         font-size: 1.5rem;
-        font-weight: bold;
-        color: #473a35;
+        color: #f5fffa;
         display: block;
     }
     
     nav a:hover {
-        color: #cfd8cf;
+        color: #d1eacd;
         transition: 0.3s;
     }
       
@@ -247,8 +251,8 @@ color: #382c20;
     }
       
     .openbtn:hover {
-        background-color: #9ebb9ebf;
-        transition: 0.3s;
+        background-color: #637863;
+        transition: 0.2s;
     }
     
     #main {
