--- a/style/style.css
+++ b/style/style.css
@@ -277,6 +277,7 @@ color: #382c20;
     /* Info i footer går over til kolonne */
     .rad-footer {
         flex-direction: column;
+        align-items: center;
     }
 
     /* Font */
