--- a/style/bookingstyle.css
+++ b/style/bookingstyle.css
@@ -1,10 +1,18 @@
 * {
     margin: 0 auto;
+    padding: 0;
+    box-sizing: border-box;
     outline: 1px solid red;
     outline-offset: -1px;
 }
 
 body {
+    background-color: #f5fffa;
+    color: #382c20;
+    font-weight: 300;
+    line-height: 1.7rem;
+    letter-spacing: 0.2rem;
+
     font-family: 'Roboto', sans-serif;
     background-color: #f5fffa;
     color:#382c20;
@@ -14,11 +22,104 @@ body {
     position: relative;   
 }
 
-h2 {
+header {
+    background-color: #d1eacd;
     font-family: 'Bebas Neue', cursive;
-    text-transform: uppercase;
-    letter-spacing: 0.1rem;
+}
+
+.bildeseksjon {
+    display: flex;
+    justify-content: center;
+}
+
+.bildeseksjon img {
+    width: 20rem;
+    padding-top: 2rem;
+}
+
+/* Navbar */
+.navbar-home {
+    text-align: center;
+    padding: 3rem 0 2rem 0;
+}
+
+.navbar-home a {
+    text-decoration: none;
+    margin: 0 1rem;
     font-size: 1.4rem;
+    color: #473a35;
+}
+
+.navbar-home a:hover {
+    color: #637863;
+    transition: 0.2s;
+}
+
+/* Slideshow bilder*/
+.slideshow {
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 0.8rem;
+}
+
+.bilde-slideshow img {
+    width: 100%;
+    height: 40rem;
+    object-fit: cover;
+}
+
+/* Neste- og tilbakeknapper */
+.knapp-tilbake, .knapp-neste {
+    position: absolute;
+    top: 50%;
+    width: auto;
+    transition: 0.5s ease;
+    padding: 1rem;
+    user-select: none;
+    background-color: #473a35;
+    opacity: 0.9;
+    color: #f1ece8;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 1.5rem;
+    border-radius: 0.3rem;
+}
+
+.knapp-tilbake:hover, .knapp-neste:hover {
+    background-color: #637863;
+    border-radius: 0.3rem;
+  }
+
+/* Plasserer neste-knappen til høyre */
+.knapp-neste {
+    right: 0;
+}
+
+/* Sirklene */
+.dot {
+    cursor: pointer;
+    height: 1rem;
+    width: 1rem;
+    margin: 0 0.5rem;
+    background-color: #473a35;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.2s ease;
+}
+
+.dot:hover, .active {
+    background-color: grey;
+}
+
+/* Fade slideshow bilder */
+.fade {
+    animation-name: fade;
+    animation-duration: 3s;
+}
+  
+  @keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
 }
 
 h1 {
@@ -30,6 +131,13 @@ h1 {
     margin-top: 4rem;
     letter-spacing: 0.15rem;
     width: 50rem;
+}
+
+h2 {
+    font-family: 'Bebas Neue', cursive;
+    text-transform: uppercase;
+    letter-spacing: 0.1rem;
+    font-size: 1.4rem;
 }
 
 .tekst {
@@ -266,13 +374,20 @@ form {
     width: 20rem;
  }
 
- .booking-input label {
+ label {
     position: absolute;
     left: 1rem;
     top: 1.3rem;
     width: 20rem;
-    
+
  }
+
+label:focus {
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+    z-index: -1;
+ }
+
 input {
     width: 100%;
     padding: 1rem;
@@ -314,9 +429,166 @@ input:focus {
  }
 
 
+ 
+ /* Footer */
+footer {
+    background-color: #473a35;
+    color: #f5fffa;
+}
+
+.rad-footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 0.8rem 0 0 0;
+    padding: 2rem;
+}
+
+.kolonne-footer {
+    margin: 1rem 3rem;
+}
+
+.kolonne-footer h1 {
+    margin-bottom: 0.5rem;
+    font-family: 'Bebas Neue', cursive;
+    font-size: 1.4rem;
+}
+
+.kolonne-footer p, .kolonne-footer a {
+    letter-spacing: 0.02rem;
+}
+
+/* Font Awesome Icons er hentet fra:
+https://stackoverflow.com/questions/37751375/instagram-new-logo-css-background
+https://www.w3schools.com/howto/howto_css_social_media_buttons.asp
+*/
+
+.fa {
+    padding: 0.3rem;
+    margin: 0.3rem 0;
+    width: 1.6rem;
+    text-align: center;
+    text-decoration: none;
+}
+
+.fa:hover, .telefonnr:hover {
+    opacity: 0.4;
+}
+
+.fa-envelope {
+    color: Salmon;
+  }
+
+.fa-facebook {
+    background: #3B5998;
+    color: white;
+    border-radius: 20%;
+    margin-right: 0.3rem;
+}
+
+.fa-instagram {
+background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+-webkit-background-clip: text;
+        background-clip: text;
+-webkit-text-fill-color: transparent;
+}
+
+.fa-twitter {
+background: #55ACEE;
+color: white;
+border-radius: 50%;
+}
+
+.fa-phone {
+color: #382c20;
+}
+
+.telefonnr {
+text-decoration: none;
+color: #382c20;
+}
+
+/* Responsive for bigger screens */
+@media screen and (min-width: 850px) {
+
+    #main, #mySidebar {
+        display: none;
+    }
+
+}
+
 @media only screen and (max-width: 850px) {
     body {
         font-size: 0.9rem;
+    }
+
+       /* Bildet i header flyttes og gjøres mindre */    
+       .bildeseksjon img {
+        width: 10rem;
+        margin-left: 1rem;
+        margin-bottom: 1rem;
+    }
+    
+    /* Går over til toggle menu */
+    nav {
+        height: 100%;
+        width: 0;
+        position: fixed;
+        z-index: 1;
+        top: 0;
+        left: 0;
+        background-color: #637863;
+        overflow-x: hidden;
+        transition: 0.5s;
+        padding-top: 5rem;
+    }
+    
+    nav a {
+        padding: 1rem;
+        text-decoration: none;
+        font-size: 1.4rem;
+        color: #f5fffa;
+        display: block;
+    }
+    
+    nav a:hover {
+        color: #d1eacd;
+        transition: 0.3s;
+    }
+      
+    .openbtn {
+        font-size: 2rem;
+        cursor: pointer;
+        background-color: transparent;
+        color: #473a35;
+        padding: 0.3rem 0.5rem;
+        border: none;
+    }
+      
+    .openbtn:hover {
+        background-color: #637863;
+        transition: 0.2s;
+    }
+    
+    #main {
+        transition: 0.5s;
+        margin-left: 0.5rem;
+    }
+    
+    #main.open {
+        margin-left: 15.5rem;
+        position: fixed;
+        background-color: #d1eacd;
+        z-index: 1;
+    }
+
+    #mySidebar.open {
+        width: 15rem;
+    }
+    
+    /* Slideshow blir mindre */
+    .bilde-slideshow img {
+        height: 30rem;
     }
  
     h1 {
@@ -416,6 +688,20 @@ input:focus {
         width: 90%;
         flex-grow: 1;
     }
+
+    /* Info i footer går over til kolonne */
+    .rad-footer {
+        flex-direction: column;
+    }
+
+    /* Font */
+    .kolonne-footer h1 {
+        font-size: 1.2rem;
+    }
+
+    .kolonne-footer p, .telefonnr {
+        font-size: 0.9rem;
+    }
 }
 
 
@@ -423,6 +709,23 @@ input:focus {
     body {
         line-height: 1.5rem;
     }
+
+        /* Toggle menu */
+        .openbtn {
+            font-size: 1.5rem;
+            padding: 0.3rem 0.5rem;
+        }
+    
+        /* Slideshow blir mindre */
+        .bilde-slideshow img {
+            height: 20rem;
+        }
+    
+        /* Neste- og tilbakeknapper */
+        .knapp-tilbake, .knapp-neste {
+            font-size: 1rem;
+            padding: 0.5rem 0.8rem;
+        }
     
     h1 {
         font-size: 1.8rem;
