--- a/style/brukervennlighetstyle.css
+++ b/style/brukervennlighetstyle.css
@@ -80,9 +80,8 @@ span{
     font-family: 'Bebas Neue', cursive;
 }
 
-.tittel {
-    text-align: center;
-    margin-top: 3rem;
+.box1 {
+    
 }
 
 /* Footer */
