--- a/style/menystyle.css
+++ b/style/menystyle.css
@@ -1,11 +1,15 @@
-*, body {
+*{
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
+}
+
+body {
     font-family: 'Roboto', sans-serif;
     color:#382c20; 
     letter-spacing: 0.02rem;
     font-weight: 300;
-    /*border: solid red 1px*/
+    background-color: #f5fffa;
 }
 
 /* Header */
@@ -45,9 +49,6 @@ header {
     transition: 0.2s;
 }
 
-main{
-    background-color: #f5fffa;
-}
 
 /*Hovedbilde med tekst.*/
 .container {
@@ -61,10 +62,9 @@ main{
     top: 75%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: rgba(252, 252, 252, 0.67); /* bakgrunn for tekst med 0.67 transparency */
+    background: rgba(252, 252, 252, 0.90); /* bakgrunn for tekst med 0.90 transparency */
   }
 
-/* Fotograf headerbilde: Zakaria Zayane. Kilde https://unsplash.com/photos/0uAVsDcyD0M */
 .container img {
     width: 100%;
 }
@@ -86,15 +86,17 @@ h1 {
     text-align: center;
     padding-bottom: 4rem;
     padding: 2rem;
+    font-weight: 300;
 }
 
 h2 {
     font-family: 'Bebas Neue', cursive;
     text-transform: uppercase;
-    letter-spacing: 0.2rem;
+    letter-spacing: 0.1rem;
     color: #637863;
     font-size: 2.2rem;
     padding-bottom: 2rem;
+    font-weight: 300;
 }
 
 h3 {
@@ -103,6 +105,7 @@ h3 {
     letter-spacing: 0.1rem;
     overflow: hidden;
     font-size: 1.4rem;
+    font-weight: 300;
     
 }
 
@@ -146,7 +149,6 @@ span{
     flex-basis: 23rem;
 }
 
-/*Fotograf frokostbilde: Micheile dot com. Kilde: https://unsplash.com/photos/vLHzjRNFbEQ*/
 .frokostmeny img {
     height: 30rem;
     border-radius: 2%;
@@ -182,7 +184,6 @@ span{
     flex-basis: 23rem;
 }
 
-/*Fotograf dessertbilde: Maddi Bazzocco. Kilde: https://unsplash.com/photos/wRU27yGfSLQ*/
 .dessertmeny img {
     height: 30rem;
     border-radius: 2%;
@@ -207,25 +208,18 @@ span{
 
 footer{
     background-color: #473a35;
-}
-
- footer p{
     color: #f5fffa;
-
- }
+}
 
 .rad-footer {
     display: flex;
     flex-direction: row;
     justify-content: center;
     padding: 1.5rem;
-    
-    
 }
 
 .kolonne-footer {
     margin: 1rem 3rem;
-    
 }
 
 .kolonne-footer h2 {
@@ -234,7 +228,6 @@ footer{
     color: #f5fffa;
     padding-bottom: 0rem;
 }
-
 
 /* Font Awesome Icons er hentet fra:
 https://stackoverflow.com/questions/37751375/instagram-new-logo-css-background
@@ -267,7 +260,6 @@ https://www.w3schools.com/howto/howto_css_social_media_buttons.asp
 .fa-instagram {
     background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
     -webkit-background-clip: text;
-    /* Also define standard property for compatibility */
     background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -287,7 +279,7 @@ https://www.w3schools.com/howto/howto_css_social_media_buttons.asp
     color: #382c20;
 }
 
-/* Responsive for bigger screens */
+/* Responsive*/
 @media screen and (min-width: 850px) {
 
     #main, #mySidebar {
@@ -375,10 +367,9 @@ https://www.w3schools.com/howto/howto_css_social_media_buttons.asp
     span{
         font-size: 1.2rem;
     }
-
     
     .centered { 
-        font-size: 3rem;
+        font-size: 2.5rem;
         padding: 0rem;
     }
 
@@ -415,6 +406,7 @@ https://www.w3schools.com/howto/howto_css_social_media_buttons.asp
     .centered { 
         font-size: 2rem;
         padding: 0rem;
+        width: 60%;
     }
 
     .box-meny-frokostbilde {
@@ -436,8 +428,9 @@ https://www.w3schools.com/howto/howto_css_social_media_buttons.asp
 @media only screen and (max-width: 800px) {
 
     .centered { 
-        font-size: 16px;
+        font-size: 1rem;
         padding: 0rem;
+        width: 50%;
     }
 }
 
