--- a/style/brukervennlighetstyle.css
+++ b/style/brukervennlighetstyle.css
@@ -81,8 +81,18 @@ span{
 }
 
 .box1 {
-    margin: 0 auto;
-    
+    margin: 5rem;
+    font-size: 1.1rem;
+    letter-spacing: 0.02rem;
+    line-height: 1.5rem;
+
+}
+.box2 {
+    margin: 3rem;
+    font-size: 1.1rem;
+    letter-spacing: 0.02rem;
+    line-height: 1.5rem;
+
 }
 
 /* Footer */
