--- a/style/menystyle.css
+++ b/style/menystyle.css
@@ -215,7 +215,8 @@ footer{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    padding: 1.5rem;
+    margin: 0.8rem 0 0 0;
+    padding: 2rem;
 }
 
 .kolonne-footer {
@@ -260,19 +261,19 @@ https://www.w3schools.com/howto/howto_css_social_media_buttons.asp
 .fa-instagram {
     background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
     -webkit-background-clip: text;
-    background-clip: text;
+            background-clip: text;
     -webkit-text-fill-color: transparent;
 }
-
+    
 .fa-twitter {
     background: #55ACEE;
     color: white;
     border-radius: 50%;
 }
-
+    
 .fa-phone {
     color: #382c20;
-    }
+}
     
 .telefonnr {
     text-decoration: none;
@@ -285,8 +286,8 @@ https://www.w3schools.com/howto/howto_css_social_media_buttons.asp
     #main, #mySidebar {
         display: none;
     }
-
 }
+
 @media screen and (max-width: 850px) {
 
     .bildeseksjon img {
