--- a/style/brukervennlighetstyle.css
+++ b/style/brukervennlighetstyle.css
@@ -44,10 +44,7 @@ header {
     transition: 0.2s;
 }
 
-main{
-    background-color: #f5fffa;
-}
-
+/* Størrelser og fonts*/
 h1 {
     font-family: 'Bebas Neue', cursive;
     text-transform: uppercase;
@@ -75,11 +72,12 @@ h3 {
     
 }
 
-span{
+span {
     font-size: 1.4rem;
     font-family: 'Bebas Neue', cursive;
 }
 
+/* Bokser til tekst*/
 .box1 {
     margin: 5rem;
     font-size: 1.1rem;
@@ -94,6 +92,33 @@ span{
     line-height: 1.5rem;
 
 }
+
+/*Bilder*/
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    
+}
+.bildeTekst {
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 0.8rem;
+}
+
+.container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 1.5rem;
+}
+
+.item {
+    margin: 1rem 3rem;
+}
+
+
 
 /* Footer */
 
@@ -113,6 +138,11 @@ footer{
     }
 }
 @media screen and (max-width: 850px) {
+    .box1 h1 {
+        font-size: 1.8rem;
+        text-align: center;
+    }
+
     .bildeseksjon img {
         width: 10rem;
         margin-left: 1rem;
@@ -175,6 +205,12 @@ footer{
 
     #mySidebar.open {
         width: 15rem;
+    }
+
+    /*Flexbox stackes*/
+    .container {
+        flex-direction: column;
+        align-items: center;
     }
 }
 
