--- a/style/style.css
+++ b/style/style.css
@@ -99,7 +99,7 @@ header {
 }
 
 .dot:hover, .active {
-    background-color: grey;
+    background-color: #637863;
 }
 
 /* Fade slideshow bilder */
